<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/f_sign_up_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edit_text_corners"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/com_facebook_device_auth_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/f_sign_up_et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text_corners"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_device_auth_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_sign_up_et_email"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/f_sign_up_bt_sign_up"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corners_for_buttons"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_sign_up_et_confirm_password"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/f_sign_up_et_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text_corners"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/com_facebook_device_auth_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_sign_up_et_password"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/f_sign_up_tv_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/tw__composer_red"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/f_sign_up_et_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/f_sign_up_et_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>